--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -1,1 +1,6 @@
-<h1>Articles</h1>
+{% extends 'base.html.twig' %}
+{% block title %}Symphart Articles{% endblock %}
+
+{% block body %}
+  <h1>Articles</h1>
+{% endblock %}
