--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        <<link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
+        <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
     </head>
     <body>
+        {{ include('inc/navbar.html.twig')}}
         {% block body %}{% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
