Updates controller to pass in an array to the index view

--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -2,5 +2,5 @@
 {% block title %}Symphart Articles{% endblock %}
 
 {% block body %}
-  <h1>Articles</h1>
+  <h1>My name is {{ name }}</h1>
 {% endblock %}
