Updates articles index to show article titles in database

--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -13,7 +13,7 @@
       <tbody>
       {% for article in articles %}
         <tr>
-          <td>{{ article }}</td>
+          <td>{{ article.title }}</td>
           <td>
             <a href="/article/1" class="btn btn-dark">Show</a>
           </td>
