Updates article show link to article id

--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -15,7 +15,7 @@
         <tr>
           <td>{{ article.title }}</td>
           <td>
-            <a href="/article/1" class="btn btn-dark">Show</a>
+            <a href="/article/{{ article.id }}" class="btn btn-dark">Show</a>
           </td>
         </tr>
       {% endfor %}
