--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}{{ Article.title }}{% endblock %}
+{% block title %}{{ article.title }}{% endblock %}
 
 {% block body %}
   <h1>{{ article.title }}</h1>
