Updates routes to symfony syntax

--- a/templates/todos/index.html.twig
+++ b/templates/todos/index.html.twig
@@ -15,7 +15,7 @@
         <tr>
           <td>{{ todo.title }}</td>
           <td>
-            <a href="/todos/{{ todo.id }}" class="">Show</a>
+            <a href="/todo/{{ todo.id }}" class="">Show</a>
           </td>
         </tr>
       {% endfor %}
