--- a/templates/todos/show.html.twig
+++ b/templates/todos/show.html.twig
@@ -5,5 +5,5 @@
   <h1>{{ todo.title }}</h1>
   <p>{{ todo.body }}</p>
   <hr>
-  <a href="/">Go Back</a>
+  <a href="/todo">Go Back</a>
 {% endblock %}
