--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a href="/article/new" class="nav-link">New Article</a>
       </li>
+      <li class="nav-item">
+        <a href="/todo/new" class="nav-link">New To-Do</a>
+      </li>
     </ul>
   </div>
 </div>
