Adds h1 title to new article template

--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -3,6 +3,7 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
+  <h1>Add a new Article</h1>
   {{ form_start(form)}}
   {{ form_widget(form)}}
   {{ form_end(form)}}
